<resources>
    <string name="title">Título</string>
    <string name="code">Código</string>
    <string name="description">Descripción</string>
    <string name="members">Miembros</string>
    <string name="comments">Comentarios</string>
    <string name="comment_hint">Añade un comentario</string>
    <string name="rate">valorar</string>
    <string name="add_user">Añadir participante</string>
    <string name="add">Añadir</string>
    <string name="Pro_question">¿Desea utilizar la versión Pro</string>
    <string name="uses">Usos restantes:</string>
    <string name="dont_ask">No volver a preguntar</string>
    <string name="yes">Si</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="keep_sesion">Mantener sesión iniciada</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrarse</string>
    <string name="username">Nombre de usuario</string>
    <string name="pass_hint">Contraseña (6 caracteres mínimo)</string>
    <string name="pass_2">Repetir contraseña</string>
    <string name="group_edit">Editar grupo</string>
    <string name="save">Guardar</string>
    <string name="loading">Cargando...</string>
    <string name="java">Java</string>
    <string name="javascript">JavaScript</string>
    <string name="python">Python</string>
    <string name="c">C</string>
    <string name="cplus">C++</string>
    <string name="txt">TXT</string>
    <string name="privat">Privado</string>
    <string name="privat_mayus">PRIVADO</string>
    <string name="publi">Público</string>
    <string name="publi_mayus">PÚBLICO</string>
    <string name="group">Grupo</string>
    <string name="group_mayus">GRUPO</string>
    <string name="views">Visualizaciones</string>
    <string name="download">Descargas</string>
    <string name="notify_pro">Notificar Pro disponible</string>
    <string name="smart_bleed">Sangrado inteligente</string>
    <string name="change_mail">Cambiar Correo electrónico</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="delete_acc">Borrar cuenta</string>


    <string name="no_result">Sin resultados</string>
    <string name="no_comments">Sin comentarios</string>
    <string name="error_unexpected">Ha sucedido un error inesperado, por favor inténtelo otra vez.</string>
    <string name="error_login">Error al iniciar sesión, revise los datos.</string>
    <string name="error_empty_fields">Por favor rellene todos los campos.</string>
    <string name="error_pass_incorrect">La contraseña introducida con cumple las condiciones.</string>
    <string name="error_pass_not_match">Las contraseñas no coinciden.</string>
    <string name="error_mail_incorrect">El correo introducido no es válido.</string>
    <string name="error_user_exist">El nombre de usuario ya está en uso.</string>
    <string name="error_mail_exist">Este correo ya esta registrado.</string>
    <string name="error_pass_under_six">La contraseña debe ser mayor de 6 caracteres</string>
    <string name="error_register">El registro ha fallado, por favor revise la información facilitada.</string>
    <string name="alert_register_correct">Registro correcto.</string>
    <string name="alert_delete_ask">¿De verdad quieres borrarlo?</string>
    <string name="alert_file_saved">Archivo guardado.</string>
    <string name="alert_delete_account">¿Seguro que quiere borrar su cuenta? Todos sus códigos guardados serán eliminados</string>
    <string name="error_mail_not_match">El correo no coincide con el de su cuenta</string>
    <string name="alert_saved_changes">Cambios guardados.</string>
    <string name="error_empty_field">Este campo no puede estar vacío</string>
    <string name="error_already_group_member">El usuario ya forma parte del grupo</string>
    <string name="error_user_not_exist">El usuario no existe</string>
    <string name="alert_delete_user_from_group">¿De verdad quieres eliminar a este usuario del grupo?</string>
    <string name="error_group_empty">El grupo debe tener más de un integrante</string>
    <string name="success">Creado correctamente</string>
    <string name="language">Idioma</string>
    <!-- MENU-->
    <string name="menu_capture">Capturar código</string>
    <string name="menu_private">Mis códigos privados</string>
    <string name="menu_public">Mis códigos públicos</string>
    <string name="menu_groups">Grupos</string>
    <string name="menu_explore">Explorar</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string-array name="tipos">
        <item>JAVA</item>
        <item>C</item>
        <item>C++</item>
        <item>PYTHON</item>
        <item>JAVASCRIPT</item>
        <item>OTRO</item>
    </string-array>

    <string-array name="visibilidad">
        <item>PRIVADO</item>
        <item>PÚBLICO</item>
        <item>GRUPO</item>
    </string-array>
    <string-array name="idiomas">
        <item>ESPAÑOL</item>
        <item>ENGLISH</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_sub">Requiere reiniciar</string>

</resources>
